infra/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jmaurastyle-ingress
  annotations:
    kubernetes.io/ingress.class: "public"
spec:
  rules:
  - host: jmaurastyle.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jmaurastyle-backend
            port:
              number: 8000
